@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIOCmd.c,v 1.19 2004/07/15 20:19:30 andreas_kupries Exp $
+ * RCS: @(#) $Id: tclIOCmd.c,v 1.20 2004/07/16 22:37:28 andreas_kupries Exp $
  */
 
 #include "tclInt.h"
@@ -1498,7 +1498,7 @@ Tcl_FcopyObjCmd(dummy, interp, objc, objv)
     }
     if ((mode & TCL_READABLE) == 0) {
 	Tcl_AppendStringsToObj(Tcl_GetObjResult(interp), "channel \"",
-		Tcl_GetString(objv[1]), 
+		arg, 
                 "\" wasn't opened for reading", (char *) NULL);
         return TCL_ERROR;
     }
@@ -1509,7 +1509,7 @@ Tcl_FcopyObjCmd(dummy, interp, objc, objv)
     }
     if ((mode & TCL_WRITABLE) == 0) {
 	Tcl_AppendStringsToObj(Tcl_GetObjResult(interp), "channel \"",
-		Tcl_GetString(objv[1]), 
+		arg, 
                 "\" wasn't opened for writing", (char *) NULL);
         return TCL_ERROR;
     }
